Web chat: using socket.io[nodeJS]

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 		</script>
 	</head>
 	<body>
+		<!-- 메인페이지입니다 -->
 		<div data-role="page" id="new">
 			<div data-role="header">
 				<h1>Socket.io Chat</h1>
@@ -88,6 +89,7 @@
 			</div>
 		</div>
 		
+		<!-- 방 목록보기 페이지 -->
 		<div data-role="page" id="roomList">
 			<div data-role="header">
 				<h1>Socket.io Chat</h1>
@@ -105,6 +107,7 @@
 			</div>
 		</div>
 		
+		<!-- 채팅창 페이지 -->
 		<div data-role="page" id="chatpage">
 			<div data-role="header">
 				<h1>Socket.io Chat</h1>
